--- a/ixsight.html
+++ b/ixsight.html
@@ -394,9 +394,9 @@
                               If you have already created "Unique Customer
                               Identification Code" through any other process or
                               solution - it is possible that demands of business
-                              and multiple systems may have created 
-                              inaccuracies or linking of unrelated parties which
-                              in turn impact Compliance adherence and payouts.
+                              and multiple systems may have created inaccuracies
+                              or linking of unrelated parties which in turn
+                              impact Compliance adherence and payouts.
                             </div>
                           </td>
                         </tr>
@@ -419,7 +419,7 @@
                                 color: #000000;
                               "
                             >
-                              Deduplix team provides strong combination of  Best
+                              Deduplix team provides strong combination of Best
                               -in-class-Solution + Professional Expertise +
                               Engineering skills. Deduplix intelligently handles
                               Indian Data nuances.
@@ -446,8 +446,8 @@
                               "
                             >
                               Deduplix is BFSI’s most reliable, accurate and
-                              scientific solution.  Highly Configurable  with
-                              multiple match methods  &  options to set Customer
+                              scientific solution. Highly Configurable with
+                              multiple match methods & options to set Customer
                               identification & Fraud control Rules , multiple
                               database match capability combined with high
                               quality output and great performance. . These are
@@ -583,7 +583,7 @@
                                     />
                                   </svg>
                                   <br /><br />
-                                  100+ marquee BFSI Clients - Leading Banks,
+                                  100+ marquee BFSI Clients - Leading Banks,
                                   NBFCs, Leading Registries
                                 </p>
                               </td>
@@ -658,7 +658,7 @@
                                     />
                                   </svg>
                                   <br /><br />
-                                  Customer-Search:  Highly Intelligent fuzzy
+                                  Customer-Search: Highly Intelligent fuzzy
                                   Matching on names, addresses and 60+ variables
                                 </p>
                               </td>
@@ -884,7 +884,7 @@
                                     />
                                   </svg>
                                   <br /><br />
-                                  AML-Watch: Match with lists like UN Sanction,
+                                  AML-Watch: Match with lists like UN Sanction,
                                   EU, HMT etc.
                                 </p>
                               </td>
@@ -1034,7 +1034,7 @@
                                     />
                                   </svg>
                                   <br /><br />
-                                  Regulatory Compliance: Generate UCIC/Client ID
+                                  Regulatory Compliance: Generate UCIC/Client ID
                                   mandated by RBI/IRDA
                                 </p>
                               </td>
@@ -1131,10 +1131,10 @@
                                 color: #000000;
                               "
                             >
-                              Deduplix is Industry's Leading and Most Popular
+                              Deduplix is Industry's Leading and Most Popular
                               Match Engine – providing high level of
                               configurability, great user experience and
-                              flexibility.  Extremely adept at matching Indian
+                              flexibility. Extremely adept at matching Indian
                               Names and Addresses for any kind of variation –
                               phonetic, order, thesaurus etc.
                             </div>
@@ -1161,7 +1161,7 @@
                               "
                             >
                               Deduplix is available as API or Batch. In
-                              addition, this comes backed  with complete Support
+                              addition, this comes backed with complete Support
                               and Consultancy from the experienced Ixsight team.
                             </div>
                           </td>
@@ -1187,7 +1187,7 @@
                               "
                             >
                               Get the Deduplix Advantage for Smarter and Quicker
-                              Initial Decisioning – translating this to positive
+                              Initial Decisioning – translating this to positive
                               outcomes for you.
                             </div>
                           </td>
@@ -1269,7 +1269,9 @@
                             "
                           >
                             Visit our website at <br />
-                            <a href="http://www.ixsight.com">www.ixsight.com</a>
+                            <a href="https://www.ixsight.com"
+                              >www.ixsight.com</a
+                            >
                             <br /><br />
                             Call Us at
                             <a href="tel:+919890152052">+91-9890-152-052</a>
