--- a/ixsight.html
+++ b/ixsight.html
@@ -402,7 +402,7 @@
                         </tr>
                         <tr>
                           <td
-                            align="left"
+                            align="justify"
                             style="
                               font-size: 0px;
                               padding: 10px 25px;
@@ -415,7 +415,7 @@
                                 font-size: 14px;
                                 font-weight: 700;
                                 line-height: 1.5;
-                                text-align: left;
+                                text-align: justify;
                                 color: #000000;
                               "
                             >
@@ -428,7 +428,7 @@
                         </tr>
                         <tr>
                           <td
-                            align="left"
+                            align="justify"
                             style="
                               font-size: 0px;
                               padding: 10px 25px;
@@ -441,7 +441,7 @@
                                 font-size: 14px;
                                 font-weight: 700;
                                 line-height: 1.5;
-                                text-align: left;
+                                text-align: justify;
                                 color: #000000;
                               "
                             >
