--- a/ixsight.html
+++ b/ixsight.html
@@ -448,9 +448,9 @@
                               Deduplix is BFSI’s most reliable, accurate and
                               scientific solution. Highly Configurable with
                               multiple match methods & options to set Customer
-                              identification & Fraud control Rules , multiple
+                              identification & Fraud control Rules, multiple
                               database match capability combined with high
-                              quality output and great performance. . These are
+                              quality output and great performance. These are
                               just few of the reasons why it is preferred by
                               over 100 clients. When it comes to serious
                               Relationship Discovery look no further than
